# crabul

./: Cargo.toml  Dockerfile  lcov.info
frontend/: package-lock.json  package.json  tailwind.config.js
frontend/src/: index.css  main.tsx
frontend/src/context/: WebSocketContext.tsx
frontend/src/hooks/: useGameState.tsx  useRoomState.tsx  useWebSocket.tsx
frontend/src/lib/: game-messages.handler.ts  game.service.ts  websocket.utils.ts
frontend/src/models/: WebSocketDataType.ts
frontend/src/routes/: game.routes.tsx  gameLayout.tsx
frontend/src/store/: gameStore.ts  roomStore.ts  socketStore.ts
frontend/src/views/: StartGame.tsx  WaitingRoom.tsx
frontend/src/views/Game/: GameRoom.tsx  GameWrapper.tsx  WaitingRoom.tsx
src/: api.rs  consts.rs  deck.rs  lib.rs  main.rs  room.rs  room_commander.rs  room_old.rs  server.rs  ws_client.rs
src/room/: commander.rs  commands.rs  consts.rs  errors.rs  events.rs  mod.rs  room.rs  server.rs
static/: index.css  index.html
tests/: socket_tests.rs
