[package]
name = "crabul"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.9.0"
actix-ws = "0.3.0"
futures-util = "0.3.31"
rand = "0.8.5"
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.132"
tokio = { version = "1.41.1", features = ["macros", "rt-multi-thread", "sync", "test-util"] }
